--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,10 @@
 version: '3.8'
 services:
   company_introduction:
-    container_name: company_introduction_container 
+    container_name: company_introduction_container
     build: ./
     volumes:
       - type: bind
         source: ./reports 
         target: /usr/app/src/reports
+    command: bash
