--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,8 @@ services:
     build: ./
     stdin_open: true
     tty: true
+    env_file:
+      - .env
     volumes:
       - type: bind
         source: ./reports 
