--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 # Replace the value with your Alpha Vantage API key. A free key for Alpha Vantage can be generated from https://www.alphavantage.co/support/
-ALPHAVANTAGE_API_KEY.=YOUR_API_KEY_HERE
+ALPHA_VANTAGE_API_KEY=YOUR_API_KEY_HERE
